<resources>
    <string name="app_name">MenuProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    <string name="SMS_string">SMS</string>
    <string name="Phone_string">PHONE</string>
    <string name="Web_string">WEB</string>
    <string name="Map_string">MAP</string>
    <string name="Share_string">SHARE</string>
    <string name="NewActivity_string">NEW aCTIVITY</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help">Help</string>
    <string name="title_activity_new">NewActivity</string>

</resources>
